--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Anular.cshtml
@@ -189,7 +189,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <label for="IdMarca">Marca*</label>
+                                    <label for="IdMarca">Grupo*</label>
                                     @Html.DropDownListFor(q => q.IdMarca, new SelectList(ViewBag.lst_marca, "IdMarca", "Descripcion"), new { @class = "form-control", @id = "IdMarca" })
                                     @Html.ValidationMessageFor(q => q.IdMarca, "", new { @class = "text-danger" })
                                 </div>
