--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos_abono_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Prestamos/_GridViewPartial_prestamos_abono_det.cshtml
@@ -6,32 +6,31 @@
         settings.CallbackRouteValues = new { Controller = "Prestamos", Action = "GridViewPartial_prestamos_abono_det" };
         settings.KeyFieldName = "NumCuota";
         settings.Width = Unit.Percentage(100);
+        settings.CommandColumn.ShowNewButtonInHeader = true;
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
-        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
-        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Prestamos", Action = "EditingUpdate", Area = "RRHH" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "Prestamos", Action = "EditingDelete", Area = "RRHH" };
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.Control;
 
-        settings.CommandColumn.Visible = false;
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Prestamos", Action = "AbonoEditingUpdate", Area = "RRHH" };
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.Control;
+        
+        settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowEditButton = true;
-        settings.CommandColumn.ShowDeleteButton = true;
+        settings.CommandColumn.ShowDeleteButton = false;
 
-        settings.SettingsContextMenu.Enabled = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
-        settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = true;
-        settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = true;
+        settings.SettingsContextMenu.Enabled = false;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
 
-        //Configuración para que la grilla no muestre texto completo
-        settings.SettingsBehavior.AllowEllipsisInText = true;
-        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -40,8 +39,6 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
         //Funcion para inicializar fila al presionar nuevo
-
-
         settings.Columns.Add(column =>
         {
             column.FieldName = "NumCuota";
@@ -61,7 +58,8 @@
         {
             column.FieldName = "FechaPago";
             column.Caption = "Fecha descuento";
-            column.Width = Unit.Percentage(15);
+            column.Width = Unit.Percentage(10);
+            column.ReadOnly = true;
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
@@ -73,7 +71,8 @@
         {
             column.FieldName = "TotalCuota";
             column.Caption = "$Valor cuota";
-            column.Width = Unit.Percentage(15);
+            column.ReadOnly = true;
+            column.Width = Unit.Percentage(10);
             column.EditorProperties().SpinEdit(sp =>
             {
                 sp.MinValue = 0;
@@ -83,25 +82,11 @@
 
             });
         });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "ValorAplicado";
-            column.Caption = "$Valor aplicado";
-            column.Width = Unit.Percentage(15);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-                column.PropertiesEdit.DisplayFormatString = "n2";
-
-            });
-        });
-        
         settings.Columns.Add(column =>
         {
             column.FieldName = "Observacion_det";
             column.Caption = "Observación";
+            column.ReadOnly = true;
             column.Width = Unit.Percentage(30);
             column.EditorProperties().TextBox(sp =>
             {
@@ -115,7 +100,8 @@
         {
             column.FieldName = "IdNominaTipoLiqui";
             column.Caption = "Descuento en:";
-            column.Width = Unit.Percentage(35);
+            column.ReadOnly = true;
+            column.Width = Unit.Percentage(25);
             column.EditorProperties().ComboBox(p =>
             {
                 p.Columns.Add("DescripcionProcesoNomina", "Descripción").Width = Unit.Percentage(70);
@@ -130,7 +116,7 @@
         {
             column.FieldName = "EstadoPago";
             column.Caption = "Estado";
-            column.Width = Unit.Percentage(35);
+            column.Width = Unit.Percentage(10);
             column.EditorProperties().ComboBox(p =>
             {
                 p.Columns.Add("ca_descripcion", "Descripción").Width = Unit.Percentage(70);
@@ -140,7 +126,7 @@
                 p.DataSource = ViewBag.lst_catalogo;
                 p.Width = Unit.Percentage(100);
             });
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
 
         });
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "TotalCuota");
