--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_017.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/FacturacionReportes/FAC_017.cshtml
@@ -80,7 +80,7 @@
                                    listBoxSettings.ControlStyle.Border.BorderWidth = 0;
                                    listBoxSettings.ControlStyle.BorderBottom.BorderWidth = 1;
 
-                                   listBoxSettings.Height = Unit.Pixel(200);
+                                   listBoxSettings.Height = Unit.Pixel(350);
                                    listBoxSettings.Width = Unit.Percentage(100);
 
                                    listBoxSettings.Properties.EnableSelectAll = true;
@@ -88,7 +88,7 @@
                                    listBoxSettings.Properties.SelectionMode = ListEditSelectionMode.CheckColumn;
                                    foreach (var item in ViewBag.lst_marca)
                                    {
-                                       listBoxSettings.Properties.Items.Add(item.Descripcion, item.IdMarca);
+                                       listBoxSettings.Properties.Items.Add(item.Descripcion, item.IdMarca).Selected = item.Seleccionado;
                                    }
                                    listBoxSettings.Properties.ClientSideEvents.SelectedIndexChanged = "updateText";
                                    listBoxSettings.Properties.ClientSideEvents.Init = "updateText";
