--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
@@ -2,7 +2,7 @@
 @{
                 /**/
 
-                ViewBag.Title = "Anular deuda";
+                ViewBag.Title = ("Anular factura por proveedor" + " con ID #" + @Model.IdCbteCble_Ogiro);
                 if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
                 {
                     Response.Redirect("~/Account/Login");
