--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_CambioProducto_Info
 @{
-    ViewBag.Title = "Modificar cambio";
+    ViewBag.Title = ("Modificar cambio" + " con ID #" + @Model.IdCambio);
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
