--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Caja.caj_Caja_Movimiento_Info
 @{
-    ViewBag.Title = "Anular ingreso";
+    ViewBag.Title = ("Anular ingreso" + " con ID #" + @Model.IdCbteCble);
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
