--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Contabilidad.ct_cbtecble_Info
 @{
-    ViewBag.Title = "Modificar comprobante contable";
+    ViewBag.Title = ("Modificar comprobante contable" + " con ID #" + @Model.IdCbteCble);
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
