--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Modificar.cshtml
@@ -2,7 +2,7 @@
 
 @model Core.Erp.Info.CuentasPorPagar.cp_orden_pago_Info
 @{
-    ViewBag.Title = "Modificar orden";
+    ViewBag.Title = ("Modificar orden" + " con ID #" + @Model.IdOrdenPago);
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
