--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
@@ -2,7 +2,7 @@
 @{
                 /**/
 
-                ViewBag.Title = "Modificar factura";
+                ViewBag.Title = ("Modificar factura" + " con ID #" + @Model.IdCbteVta);
                 if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
                 {
                     Response.Redirect("~/Account/Login");
