--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/Modificar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_notaCreDeb_Info
 @{
-    ViewBag.Title = "Modificar nota de crédito";
+    ViewBag.Title = ("Modificar nota de crédito" + " con ID #" + @Model.IdNota);
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
