--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_notaCreDeb_Info
 @{
-    ViewBag.Title = "Anular nota de débito";
+    ViewBag.Title = ("Anular nota de débito" + " con ID #" + @Model.IdNota);
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
