--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_banco_conciliacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_banco_conciliacion_det.cshtml
@@ -6,9 +6,9 @@
         settings.CallbackRouteValues = new { Controller = "ConciliacionBanco", Action = "GridViewPartial_banco_conciliacion_det" };
         settings.KeyFieldName = "Secuencia";
         settings.Width = Unit.Percentage(100);
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingAddNew" };
-        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingUpdate" };
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingDelete" };
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingAddNew_det" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingUpdate_det" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingDelete_det" };
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
 
         //Configuración para que la grilla no muestre texto completo
@@ -36,7 +36,7 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         settings.InitNewRow = (s, e) =>
         {
-            e.NewValues["Seleccionado"] = false;
+            e.NewValues["Seleccionado"] = true;
         };
         settings.Columns.Add(column =>
         {
@@ -65,6 +65,8 @@
                 p.ValueType = typeof(int);
                 p.DataSource = ViewBag.lst_tipo;
             });
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
@@ -81,10 +83,15 @@
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(10);
             column.FieldName = "Fecha";
             column.Caption = "Fecha";
-            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(15);
+            column.EditorProperties().DateEdit(p =>
+            {
+                p.Width = Unit.Percentage(100);
+                p.DisplayFormatString = "dd/MM/yyyy";
+                p.EditFormatString = "dd/MM/yyyy";
+            });
         });
         settings.Columns.Add(column =>
         {
