--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Anular.cshtml
@@ -372,7 +372,10 @@ function GetListBancoPorSucursal() {
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }        
         <a class="btn btn-default" href="@Url.Action("Index", "DepositoBanco", new { Area = "Banco" }, null)">Cancelar</a>
     </div>
     @section Scripts {
