--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CambioProducto/Anular.cshtml
@@ -306,7 +306,10 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index","CambioProducto",new { Area = "Facturacion" },null)">Cancelar</a>
     </div>
 
