--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Anular.cshtml
@@ -299,8 +299,11 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
-        <a class="btn btn-default" href="@Url.Action("Index","Factura",new { Area = "Facturacion" },null)">Cancelar</a>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        } 
+                <a class="btn btn-default" href="@Url.Action("Index","Factura",new { Area = "Facturacion" },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
