--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
@@ -293,7 +293,10 @@
 
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index","GuiaRemision",new { Area = "Facturacion" },null)">Cancelar</a>
     </div>
     @section Scripts {
