--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/Modificar.cshtml
@@ -540,7 +540,11 @@
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        }
+
         <a class="btn btn-default" href="@Url.Action("Index","NotaDeDebitoFacturacion",new { Area = "Facturacion" },null)">Cancelar</a>
     </div>
     @section Scripts {
