--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Consignacion/Anular.cshtml
@@ -106,7 +106,10 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index","Consignacion",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
 
