--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Anular.cshtml
@@ -155,7 +155,11 @@
     </div>
     @Html.Action("GridViewPartial_Devolucion_det")
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index", "DevolucionInventario", null)">Cancelar</a>
     </div>
 
