--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/DevolucionInventario/Modificar.cshtml
@@ -154,7 +154,10 @@
     </div>
     @Html.Action("GridViewPartial_Devolucion_det")
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index", "DevolucionInventario", null)">Cancelar</a>
     </div>
 
