--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
@@ -130,7 +130,11 @@
 
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index","EgresoInventario",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
     @section Scripts {
