--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/Anular.cshtml
@@ -18,6 +18,15 @@
     @Html.HiddenFor(q => q.IdNumMovi)
     @Html.HiddenFor(q => q.signo)
     @Html.HiddenFor(q => q.IdMovi_inven_tipo)
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+
+    }
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -106,7 +115,10 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index","IngresoInventario",new { Area = "Inventario" },null)">Cancelar</a>
     </div>
     @section Scripts {
