--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/Anular.cshtml
@@ -177,7 +177,10 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index", "RetiroActivo", new { Area = "ActivoFijo" }, null)">Cancelar</a>
     </div>
 
