--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/Modificar.cshtml
@@ -230,7 +230,11 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        }
+
         <a class="btn btn-default" href="@Url.Action("Index", "RevalorizacionActivo", new { Area = "ActivoFijo" }, null)">Cancelar</a>
     </div>
 
