--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Modificar.cshtml
@@ -217,7 +217,10 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index", "VentaActivo", new { Area = "ActivoFijo" }, null)">Cancelar</a>
     </div>
 
