--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Anular.cshtml
@@ -192,7 +192,10 @@
         </div>
     </div>
     <div class="box-footer">
-        <button type="submit" class="btn btn-danger">Anular</button>
+        @if (ViewBag.MostrarBoton ?? false)
+        {
+            <button type="submit" class="btn btn-danger">Anular</button>
+        }
         <a class="btn btn-default" href="@Url.Action("Index", "VentaActivo", new { Area = "ActivoFijo" }, null)">Cancelar</a>
     </div>
 
